<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_white_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/sort_icon_white_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_sort"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_name"
                    android:title="@string/file_list_action_sort_by_name" />
                <item
                    android:id="@+id/action_sort_by_type"
                    android:title="@string/file_list_action_sort_by_type" />
                <item
                    android:id="@+id/action_sort_by_size"
                    android:title="@string/file_list_action_sort_by_size" />
                <item
                    android:id="@+id/action_sort_by_last_modified"
                    android:title="@string/file_list_action_sort_by_last_modified" />
            </group>
            <item
                android:id="@+id/action_sort_order_ascending"
                android:checkable="true"
                android:title="@string/file_list_action_sort_order_ascending" />
            <item
                android:id="@+id/action_sort_directories_first"
                android:checkable="true"
                android:title="@string/file_list_action_sort_directories_first" />
        </menu>
    </item>

    <item
        android:id="@+id/action_new_task"
        android:orderInCategory="100"
        android:title="@string/file_list_action_new_task"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_navigate_up"
        android:orderInCategory="100"
        android:title="@string/file_list_action_navigate_up"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/file_list_action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_hidden_files"
        android:orderInCategory="100"
        android:title="@string/file_list_action_show_hidden_files"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send"
        android:orderInCategory="100"
        android:title="@string/file_list_action_send"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_path"
        android:orderInCategory="100"
        android:title="@string/file_list_action_copy_path"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_in_terminal"
        android:orderInCategory="100"
        android:title="@string/file_list_action_open_in_terminal"
        app:showAsAction="never" />
</menu>
