<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/cut_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/cut"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/copy_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_archive"
        android:orderInCategory="100"
        android:title="@string/file_list_select_action_archive"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never" />
</menu>
