<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2019 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_preview_edit_toggle"
        android:icon="@drawable/eye_icon"
        android:orderInCategory="50"
        android:title="@string/file_viewer_editor_action_edit"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_encoding"
        android:orderInCategory="100"
        android:title="@string/text_editor_encoding"
        app:showAsAction="never">
        <menu />
    </item>
</menu>
